@@ -21,6 +21,7 @@ t/008integerize.t
 t/009expolygon.t
 t/010simplify.t
 t/011Int128Comparison.t
+t/012_polytree.t
 xsp/Clipper.xsp
 xsp/my.map
 xsp/types.xspt
