@@ -1,5 +1,7 @@
 Revision history for Perl extension Math::Clipper.
 
+  - New pt_execute() method exposing PolyTree.
+
 1.20  Sun Apr 28 15:43:00 2013
 
   - Fix compilation on Windows.
